--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,17 @@
     </head>
 
   <body>
+    <div>
+        <h2>Post a New Message?</h2>
+        <button style="background-color: rgb(229, 247, 247);">Post</button>
+        <a href="/next" style="background-color: rgb(229, 247, 247); border-radius: 1em">Post BUT BETTER</a>
+    </div>
     <% messages.map((message) => { %>
-        <div>
+        <div style="display: flex; flex-direction: column; background-color: rgb(193, 195, 197); border-radius: 1.5em; padding: 1em; gap: 8px; margin: 16px;">
             <h2><%=message.text%></h2>
-            <div>
-                <h3><%=message.user%></h3>
-                <h3><%=message.added%></h3>
+            <div style="display: flex; flex-direction: row; justify-content: space-between;">
+                <h3 style="color: rgb(135, 135, 137);"><%=message.user%></h3>
+                <h3 style="color: rgb(135, 135, 137)"><%=message.added%></h3>
             </div>
         </div>
     <% }) %>
