feat: Add posting functionality to message board

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -7,13 +7,12 @@
     <h1>Form</h1>
 
     <form method="POST" action="/new" style="display: flex; flex-direction: column; background-color: rgb(193, 195, 197); border-radius: 1.5em; padding: 1em; gap: 8px;">
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name"><br>
-        <label for="message">Message:</label><br>
-        <input type="textarea" id="message" name="message">
+        <label for="userName">Name:</label><br>
+        <input type="text" id="userName" name="userName"><br>
+        <label for="messageText">Message:</label><br>
+        <input type="text" id="messageText" name="messageText">
         <input type="submit" value="Submit">
     </form>
-
 
   </body>
 </html>
